Add graph table

--- a/src/components/Graph/Graph.module.css
+++ b/src/components/Graph/Graph.module.css
@@ -1,4 +1,6 @@
-.clear {
-    clear: both;
-    content: '';
+.graph {
+    margin-left: auto;
+    margin-right: auto;
+    border-spacing: 0;
+    border-collapse: collapse;
 }
