Add Sourcer, Destination nodes, and their icon/styles

--- a/src/components/Graph/Node/Node.module.css
+++ b/src/components/Graph/Node/Node.module.css
@@ -15,3 +15,45 @@
 .node:focus {
     outline: none;
 }
+
+.source {
+    background-image: url('../../../assets/images/startArrow.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    animation-name: specialNodes;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
+    animation-direction: alternate;
+    animation-iteration-count: 1;
+    animation-play-state: running;
+    animation-fill-mode: forwards;
+}
+
+.destination {
+    background-image: url('../../../assets/images/destination.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    animation-name: specialNodes;
+    animation-duration: 2s;
+    animation-timing-function: ease-out;
+    animation-direction: alternate;
+    animation-iteration-count: 1;
+    animation-play-state: running;
+    animation-fill-mode: forwards;
+}
+
+@keyframes specialNodes {
+    0% {
+        transform: scale(0.3);
+    }
+
+    50% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
