Add routing for diffferent algorithm classes, improve ui

--- a/src/components/NodeTypeButtonGroup/NodeTypeButton/NodeTypeButton.module.css
+++ b/src/components/NodeTypeButtonGroup/NodeTypeButton/NodeTypeButton.module.css
@@ -9,6 +9,11 @@
     outline: 0;
 }
 
+.nodeTypeButton:hover {
+    background: #23282c;
+    color: white;
+}
+
 .nodeTypeButtonActive {
     background: #343a40;
     color: white;
