--- a/src/components/SortingStacks/SortingStack/SortingStack.module.css
+++ b/src/components/SortingStacks/SortingStack/SortingStack.module.css
@@ -1,20 +1,38 @@
 .stack {
-    float: left;
-    margin-left: 3px;
+    display: inline-block;
+    color: white;
+    font-weight: bold;
+    font-size: 13px;
+    margin-left: 4px;
+    border-style: solid;
 }
 
 .unvisitedStack {
-    border-left: 15px solid #23282c;
+    border-color: #23282c;
+    background-color: #23282c;
 }
 
 .swappingStack {
-    border-left: 15px solid #397bff;
+    border-color: #397bff;
+    background-color: #397bff;
 }
 
 .currentStack {
-    border-left: 15px solid #6435c9;
+    border-color: #6435c9;
+    background-color: #6435c9;
 }
 
 .sortInPlaceStack {
-    border-left: 15px solid #21ba45;
+    border-color: #21ba45;
+    background-color: #21ba45;
+}
+
+.mergingStack {
+    border-color: #397bff;
+    background-color: #397bff;
+}
+
+.leftToMergeStack {
+    border-color: #397bff;
+    background-color: #397bff;
 }
