--- a/src/components/SortOptionsButtonGroup/SortOptionsButtonGroup.module.css
+++ b/src/components/SortOptionsButtonGroup/SortOptionsButtonGroup.module.css
@@ -6,13 +6,11 @@
     align-items: center;
 }
 
-.regenerateButton {
-    margin-left: 20px;
+.slider {
+    display: inline-block;
+    margin-right: 20px;
 }
 
-.slider {
-    float: left;
-    width: 15%;
-    margin-left: 20%;
-    margin-right: -20%;
+.startButton {
+    margin-right: 20px;
 }
