--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
     padding: 0;
     font-family: arial, helvetica;
     background: #666a86 !important;
+    overflow: hidden !important;
 }
 
 *,
