--- a/src/components/SortOptionsButtonGroup/SortOptionsButtonGroup.module.css
+++ b/src/components/SortOptionsButtonGroup/SortOptionsButtonGroup.module.css
@@ -1,5 +1,5 @@
 .sortOptionsButtonGroup {
-    margin-top: 85px;
+    margin-top: 100px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
@@ -12,10 +12,84 @@
     margin-right: 20px;
 }
 
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0.25rem;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+        box-shadow 0.15s ease-in-out;
+    color: #fff;
+}
+
+.btn:hover {
+    cursor: pointer;
+}
+
+.btn:hover:disabled {
+    cursor: not-allowed;
+}
+
 .startButton {
     margin-right: 20px;
+    background-color: #7a0194;
+}
+
+.startButton:hover,
+.startButton:disabled {
+    background-color: #67007d;
+}
+
+.startButton:focus {
+    outline: 0;
+}
+
+.startButton:not(:disabled):not(.disabled):active,
+.startButton:not(:disabled):not(.disabled).active,
+.startButton.dropdown-toggle {
+    background-color: #7a0194;
+    border-color: #7a0194;
+}
+
+.startButton:not(:disabled):not(.disabled):active:focus,
+.startButton:not(:disabled):not(.disabled).active:focus,
+.startButton.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.2rem #7a0194;
 }
 
 .clearButton {
     margin-right: 20px;
+    background-color: #e48031;
+}
+
+.clearButton:hover,
+.clearButton:disabled {
+    background-color: #c5681e;
+}
+
+.clearButton:focus {
+    outline: 0;
+}
+
+.clearButton:not(:disabled):not(.disabled):active,
+.clearButton:not(:disabled):not(.disabled).active,
+.clearButton.dropdown-toggle {
+    background-color: #e48031;
+    border-color: #e48031;
+}
+
+.clearButton:not(:disabled):not(.disabled):active:focus,
+.clearButton:not(:disabled):not(.disabled).active:focus,
+.clearButton.dropdown-toggle:focus {
+    box-shadow: 0 0 0 0.2rem #e48031;
 }
