--- a/src/components/Graph/Node/Node.module.css
+++ b/src/components/Graph/Node/Node.module.css
@@ -45,6 +45,7 @@
 }
 
 .wall {
+    background: transparent;
     background-image: url('../../../assets/images/wall.png');
     background-position: center;
     background-repeat: no-repeat;
