--- a/src/components/SortOptionsButtonGroup/SortOptionsButtonGroup.module.css
+++ b/src/components/SortOptionsButtonGroup/SortOptionsButtonGroup.module.css
@@ -23,7 +23,7 @@
     -ms-user-select: none;
     user-select: none;
     border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
+    padding: 8px;
     font-size: 1rem;
     line-height: 1.5;
     border-radius: 0.25rem;
